Fix post overflow

--- a/source/_scss/_post.scss
+++ b/source/_scss/_post.scss
@@ -2,6 +2,8 @@
 .post--comments,
 .post--related {
   margin-bottom: 5rem;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .post--heading {
